2010-01-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-thread-kill): If the region is active, then
	kill all threads in the region.

2010-01-19  Stas Boukarev  <stassats@gmail.com>

	* swank-rpc.lisp (:swank-rpc): (:use :cl), SBCL
	doesn't use it by default.

2010-01-19  Terje Norderhaug  <terje@in-progress.com>

	* Refactorized parts of slime.lisp into a new swank-rpc module.

2010-01-14  Stas Boukarev  <stassats@gmail.com>

	* doc/slime.texi (Setting up the lisp image):
	(swank-loader:init) is also needed for loading swank.
	Reported by Evgeny Bahvalov.

2010-01-13  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (*swank-state-stack*): Delete. Not needed anymore.
	(defslimefun state-stack): Delete.
	(decode-message): Adapted.
	(debug-in-emacs): Adapted.

2010-01-11  Mark Evenson  <evenson@dada.local>

	* swank-abcl.lisp (emacs-inspect): Implementation for Java
	objects.

	Fix compiler warning about *ABCL-SIGNALED-CONDITIONS*.

2010-01-06  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-backend (declaration-arglist): Normalize declaration
	specifiers to contain `variables' rather than `vars'.

2010-01-05  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (compiler-note-location): Add missing return-from.

2010-01-05  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (compile-defun [test]): Add two cases.

2010-01-05  Cecil Westerhof  <Cecil@decebal.nl>

	* slime.texi (inferior-slime-mode): Fix thinko.

2010-01-05  Terje Norderhaug  <terje@in-progress.com>

	Provide default implementation for all-threads.

	* swank-backend.lisp (all-threads): Just return ().

2010-01-05  Helmut Eller  <heller@common-lisp.net>

	Fix M-. bug related to CMUCL's multi-file compilation units.

	* swank-cmucl.lisp (code-location-stream-position): Require the
	"root-number" as argument and subtract it from the TLF number.
	(location-in-file): Pass the root number along.
	(code-location-string-offset): Use 0 as root number.
